# coding_challenges

./: .gitignore
ccchat/ccpychat/: client.py  server.py
ccjazon/: Cargo.toml  README.md
ccjazon/src/: lexer.rs  main.rs  parser.rs  validator.rs
ccjazon/src/parser/: scanner.rs  token.rs
ccjazon/src/scanner/: scanner.rs
ccjazon/src/token/: token.rs
ccjazon/tests/: test.rs
ccwc/: Cargo.toml  README.md
ccwc/src/: main.rs  path.rs  pattern.rs
ccws/: README.md  gleam.toml  manifest.toml
ccws/src/: ccws.gleam
