[package]
name = "ccwc"
version = "0.1.0"
authors = ["adrianohenriqueafonso@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A simple CLI tool to mimic wc"
readme = "README.md"
homepage = "https://github.com/adriano-henrique/coding_challenges/blob/main/ccwc/README.md"
repository = "https://github.com/adriano-henrique/coding-challenges"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
